# hackt

./: .cvsignore  AUTHORS  BOUNTY  BRANCHES  BUILDS  CLEANUP  CONTRIBUTORS  ChangeLog  DevelopmentPlan.dot  GNUmakefile  MAINTAINER-checklist  Make.deps  Make.global  Make.inc  Make.stddef  Make.vars  Makefile  Makefile.BSD  Makefile.GNU  Makefile.am  Makefile.in  NEWS  README  README.CVS  README.git  README.maintainer  TODO  aclocal.m4  art++.doxygen.config.in  art++.h  art++2obj.cc  art.doxygen.config  art.l  art.yy  art_built_ins.cc  art_built_ins.h  art_debug.h  art_lex.h  art_macros.h  art_main.cc  (+82 more)
dox/cast2hac/: CHP.tex  CHP.texi  ChangeLog  Makefile.am  PRS.tex  PRS.texi  arrays.tex  arrays.texi  cast2hac-tex.tex  cast2hac.tex  cast2hac.texi  cflat.tex  cflat.texi  connections.tex  connections.texi  definitions.tex  definitions.texi  expressions.texi  instances.tex  instances.texi  intro.tex  intro.texi  loops.tex  loops.texi  spec.tex  spec.texi  templates.tex  templates.texi  typedefs.tex  typedefs.texi  types.tex  types.texi
dox/chpsim/: Makefile.am  chpsim-tex.tex  chpsim.tex  chpsim.texi  commands.texi  execution.tex  execution.texi  extending.texi  hacchpsim.texi  intro.tex  intro.texi  stdchpfn.texi  test.texi  tutorial.texi  usage.texi
dox/ipple/: Makefile.am  commands.texi  config.texi  intro.texi  ipple.texi  usage.texi
dox/lang/: .cvsignore  ChangeLog  Makefile.am  TODO  artxx.bib  artxx.tex  hac-tex.tex  hac.bib  hac.tex  hac.texi  maketexdepend.awk
dox/mk/: Make.fig  Make.latex  Makefile.am  maketexdepend.awk  maketexdepend.tex  scantexdepend.awk  updatefig.awk  updatefig.mk
dox/net/: Makefile.am  algo.texi  config.texi  hacknet.texi  intro.texi  lang.texi  tutorial.texi  usage.texi  utilities.texi
dox/prsim/: Makefile.am  applications.texi  commands.texi  cosim.texi  diagnostics.texi  execution.texi  hacprsim.texi  intro.texi  prsim.tex  timing.texi  tips.texi  usage.texi
dox/tutorial/: ChangeLog  Makefile.am  README  hackt-tex.tex  hackt.tex  hackt.texi
lib/: ChangeLog  Makefile.am  README  TODO  alternator.hac  buffer.hac  buffer_init.hac  channel.hac  channel_bd.hac  channel_ledr.hac  connect.hac  copy.hac  env.hac  logic.hac  merge.hac  mux.hac  renv.hac  split.hac  sync.hac
lib/compat/: README  hac_fix_vt.sh  upgrade_hacprsim_channel_commands.awk
lib/libchpfn/: OS.cc  OS.h  OS.hh  TODO  assert.cc  assert.h  assert.hh  bitmanip.cc  bitmanip.h  bitmanip.hh  conditional.cc  conditional.h  conditional.hh  io.cc  io.h  io.hh  numeric.cc  numeric.h  numeric.hh  random.cc  random.hh  stdchpfn.cc  string.cc  string.h  string.hh
lib/mk/: Makefile.am  hackt-clean.mk  hackt-lt-clean.mk  hackt-lt-progs.mk  hackt-lt-rules.mk  hackt-lt-suffixes.mk  hackt-progs.mk  hackt-rules.am  hackt-rules.mk  hackt-suffixes.am  hackt-suffixes.mk  hackt.mk
lib/mpl/: README
lib/scripts/: deps_to_dot.awk  hacspice-pp.sed  prsim_timed_backtrace.awk  prsim_timed_fwdtrace.awk  prsimlog_to_evcd.awk  prsimlog_to_evcd.sh  prsimlog_to_evcd_ports.awk  prsimrc_alter_instance.awk  spice-to-hac.awk  spice-wrap.awk  spice_cell_count.awk  spice_instance_tree.awk  spice_line_join.awk  spice_to_dot.awk  spice_to_pdf.sh  spice_to_verilog_quick.awk  spice_tsort.sh  spice_type_deps.awk  spice_type_deps_to_pdf.sh  spice_unique_leaves.awk
lib/support/: ChangeLog  hac.vim  hac.xml
lib/verilog/: vcs_scandepend.sh  vpp.sh  wrap_verilog_modules_to_hacprsim.awk
scripts/: Makefile.am  backup_repository.sh  balance_indent.awk  bootstrap.freebsd  configure-gcc4.sh  exhaust_check.sh  extract_texinfo.awk  extract_texinfo.sh  maintainerclobber  readable_gcc_errors.sed  replace_if_changed.sh.in  rm_pattern.sh  tally_tests.awk
src/scm/: ChangeLog  Makefile.am  README  TODO  hacchpsimguile.scm  hacguile.scm
test/: .cvsignore  ChangeLog  Make.inc  Make.test  Make.test-alloc  Make.test-cflat  Make.test-chpsim  Make.test-compile  Make.test-create  Make.test-flatten  Make.test-graph  Make.test-guile  Make.test-head  Make.test-ipl  Make.test-net  Make.test-prsim  Make.test-tail  Make.test-unroll  Make.test-vpi  Makefile.am  Makefile.in  POM-header-filter.awk  POM-header-filter.awk.in  POM-index-filter.awk  POM-size-filter.awk  README  TODO  address_filter.sed  alloc_filter.sed  analyze-dump-diff.awk  artc-expect.sh  artc-expect.sh.in  artobj-diff.sh  artobj-diff.sh.in  artobjunroll-expect.sh  artobjunroll-expect.sh.in  check-alloc-consistency.sh.in  check-create-consistency.sh.in  chpsim-binary-size-filter.awk  chpsimckpt-load-template.chpsimrc  (+57 more)
test/PR/: 001.iplrc  001.iplrc-expect  002.iplrc  002.iplrc-expect  003.iplrc  003.iplrc-expect  003b.iplrc  003b.iplrc-expect  004.iplrc  004.iplrc-expect  004b.iplrc  004b.iplrc-expect  004c.iplrc  004c.iplrc-expect  005.iplrc  005.iplrc-expect  005b.iplrc  005b.iplrc-expect  005c.iplrc  005c.iplrc-expect  006.iplrc  006.iplrc-expect  006b.iplrc  006b.iplrc-expect  007.iplrc  007.iplrc-expect  008.iplrc  008.iplrc-expect  008b.iplrc  008b.iplrc-expect  009.iplrc  009.iplrc-expect  010.iplrc  010.iplrc-expect  011.iplrc  011.iplrc-expect  012.iplrc  012.iplrc-expect  013.iplrc  013.iplrc-expect  (+46 more)
test/benchmarks/: Makefile.am  README  event-queue-a-01.prsimrc  event-queue-a.hac
test/chpsim/: Makefile.am  arbitrate-loop-a-01.chpsimrc  arbitrate-loop-a-01.chpsimrc-expect  arbitrate-loop-a-02.chpsimrc  arbitrate-loop-a-02.chpsimrc-expect  arbitrate-loop-a-03.chpsimrc  arbitrate-loop-a-03.chpsimrc-expect  arbitrate-loop-a-04.chpsimrc  arbitrate-loop-a-04.chpsimrc-expect  arbitrate-loop-a.allocstderr  arbitrate-loop-a.createstderr  arbitrate-loop-a.expect-chpsimalloc  arbitrate-loop-a.hac  arbitrate-skip-a-01.chpsimrc  arbitrate-skip-a-01.chpsimrc-expect  arbitrate-skip-a-02.chpsimrc  arbitrate-skip-a-02.chpsimrc-expect  arbitrate-skip-a.createstderr  arbitrate-skip-a.expect-chpsimalloc  arbitrate-skip-a.hac  arbitrate-skip-b-01.chpsimrc  arbitrate-skip-b-01.chpsimrc-expect  arbitrate-skip-b.allocstderr  arbitrate-skip-b.createstderr  arbitrate-skip-b.expect-chpsimalloc  arbitrate-skip-b.hac  assert.cc  assign-once-01.chpsimrc  assign-once-parallel-a.hac  (+1129 more)
(+14120 files in other folders)
